--- a/app/src/main/res/layout/student_info.xml
+++ b/app/src/main/res/layout/student_info.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:id="@+id/card_view"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="25dp"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="40dp"
+        android:textAlignment="center"
         android:text="TextView" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
         android:src="@mipmap/ic_launcher"
         app:civ_border_width="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="7dp"
         app:civ_border_color="#FF000000"
-        android:layout_marginLeft="150dp"/>
-</LinearLayout>
+        android:layout_marginLeft="180dp"
+        android:layout_marginRight="20dp"/>
+
+    </android.support.v7.widget.CardView>
